Closed Bug 1636646 Opened 4 years ago Closed 4 years ago

Perma [Tier2] MinGW /builds/worker/checkouts/gecko/widget/windows/DirectManipulationOwner.h:10:10: fatal error: 'WinDef.h' file not found

Categories

(Core :: Widget: Win32, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- unaffected
firefox76 --- unaffected
firefox77 --- unaffected
firefox78 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: tnikkel)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [stockwell needswork:owner])

Attachments

(1 file, 2 obsolete files)

Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=301497263&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/fU5ZR-2HRAyixSqlS_If2w/runs/0/artifacts/public/logs/live_backing.log


[task 2020-05-09T00:31:40.522Z] 00:31:40 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/widget/windows'
[task 2020-05-09T00:31:40.522Z] 00:31:40 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o DirectManipulationOwner.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DMOZ_UNICODE -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/widget/windows -I/builds/worker/workspace/obj-build/widget/windows -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/toolkit/xre -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/widget/headless -I/builds/worker/checkouts/gecko/xpcom/base -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -I/builds/worker/workspace/obj-build/dist/include/cairo -fexperimental-new-pass-manager -MD -MP -MF .deps/DirectManipulationOwner.o.pp /builds/worker/checkouts/gecko/widget/windows/DirectManipulationOwner.cpp
[task 2020-05-09T00:31:40.522Z] 00:31:40 INFO - In file included from /builds/worker/checkouts/gecko/widget/windows/DirectManipulationOwner.cpp:6:
[task 2020-05-09T00:31:40.523Z] 00:31:40 INFO - /builds/worker/checkouts/gecko/widget/windows/DirectManipulationOwner.h:10:10: fatal error: 'WinDef.h' file not found
[task 2020-05-09T00:31:40.523Z] 00:31:40 INFO - #include "WinDef.h"
[task 2020-05-09T00:31:40.523Z] 00:31:40 INFO - ^~~~~~~~~~
[task 2020-05-09T00:31:40.523Z] 00:31:40 INFO - 1 error generated.
[task 2020-05-09T00:31:40.524Z] 00:31:40 INFO - /builds/worker/checkouts/gecko/config/rules.mk:750: recipe for target 'DirectManipulationOwner.o' failed
[task 2020-05-09T00:31:40.524Z] 00:31:40 ERROR - make[4]: *** [DirectManipulationOwner.o] Error 1
[task 2020-05-09T00:31:40.524Z] 00:31:40 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/widget/windows'
[task 2020-05-09T00:31:40.525Z] 00:31:40 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/script'
[task 2020-05-09T00:31:40.525Z] 00:31:40 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o Unified_cpp_dom_script0.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/script -I/builds/worker/workspace/obj-build/dom/script -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -fexperimental-new-pass-manager -MD -MP -MF .deps/Unified_cpp_dom_script0.o.pp Unified_cpp_dom_script0.cpp
[task 2020-05-09T00:31:40.526Z] 00:31:40 INFO - In file included from Unified_cpp_dom_script0.cpp:47:
[task 2020-05-09T00:31:40.526Z] 00:31:40 WARNING - /builds/worker/checkouts/gecko/dom/script/ScriptLoader.cpp:949:56: warning: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Wclass-varargs]
[task 2020-05-09T00:31:40.528Z] 00:31:40 INFO - JSMSG_BAD_MODULE_SPECIFIER, string.get());
[task 2020-05-09T00:31:40.528Z] 00:31:40 INFO - ^
[task 2020-05-09T00:31:40.529Z] 00:31:40 INFO - 1 warning generated.
[task 2020-05-09T00:31:40.530Z] 00:31:40 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/script'
[task 2020-05-09T00:31:40.531Z] 00:31:40 INFO - make[4]: *** Waiting for unfinished jobs....

I think WinDef.h is a standard windows header, so not quite sure what to do here.

Oh wait, I think I need triangle brackets around the header and not quotes.

Nope, that doesn't fix it.

If I remove the include for windef.h then it can't find directmanipulation.h (which is needed after bug 1630912) so I think whoever is responsible for these builds will need to look into changing or updating the build enviroment.

So I see prior art from bug 1587469 where we ifdef'd things out until the build environment could get updated, I will try that.

Attached patch ifdefmingw (obsolete) — Splinter Review

Here's the patch to fix it. I'll upload it properly when the base patches merge to central.

Assignee: nobody → tnikkel

It seems like the build environment needs updating/modifying so it can handle this. But for now we unbreak the build.

Attachment #9146991 - Attachment is obsolete: true

Tom, it seems you might know how to move forward on eventually getting these ifdefs removed?

Flags: needinfo?(tom)

It seems like the build environment needs updating/modifying so it can handle this. But for now we unbreak the build.

Attachment #9147007 - Attachment is obsolete: true

MinGW is case sensitive. Did you try windef.h? I see the header in the mingw-w64 source code...

This lint job is intended to catch these errors and suggest the fix; but maybe it's only working for backeted includes?

Flags: needinfo?(tom) → needinfo?(tnikkel)

I worked around the windef problems by including windows.h, so it might have been the case sensitive problem. However, after that I get "'directmanipulation.h' file not found". I'm using all lowercase, and the file is lowercase on my machine, and I tried downloading the mingw-w64 source and the file is not in the source, neither is greping for the objects I need in any file in the source. And I tried angle brackets and quotes for including it. So it seems that directmanipulation.h is not in mingw yet?

I'm going to land the ifdef patch.

Flags: needinfo?(tnikkel) → needinfo?(tom)
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cc785b603751
ifdef direct manipulation code so it's not compiled on mingw. r=aklotz
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Depends on: 1636805

Moving needinfo to bug 1636805.

Flags: needinfo?(tom)

Set release status flags based on info from the regressing bug 1630912

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: