Bug 1636646. ifdef direct manipulation code so it's not compiled on mingw. r=aklotz

It seems like the build environment needs updating/modifying so it can handle this. But for now we unbreak the build.

Differential Revision: https://phabricator.services.mozilla.com/D74525