widget/windows/DirectManipulationOwner.cpp
@@ -8,6 +8,8 @@
 #include "InputData.h"
 #include "mozilla/TimeStamp.h"
 
+#if !defined(__MINGW32__) && !defined(__MINGW64__)
+
 // Direct Manipulation is only defined for Win8 and newer.
 #if defined(_WIN32_WINNT)
 #  undef _WIN32_WINNT
@@ -20,8 +22,12 @@
 
 #include "directmanipulation.h"
 
+#endif // !defined(__MINGW32__) && !defined(__MINGW64__)
+
 namespace mozilla {
 namespace widget {
+
+#if !defined(__MINGW32__) && !defined(__MINGW64__)
 
 class DManipEventHandler : public IDirectManipulationViewportEventHandler,
                            public IDirectManipulationInteractionEventHandler {
@@ -331,16 +337,22 @@ void DManipEventHandler::Update() {
   }
 }
 
+#endif // !defined(__MINGW32__) && !defined(__MINGW64__)
+
 void DirectManipulationOwner::Update() {
+#if !defined(__MINGW32__) && !defined(__MINGW64__)
   if (mDmUpdateManager) {
     mDmUpdateManager->Update(nullptr);
   }
+#endif
 }
 
 DirectManipulationOwner::DirectManipulationOwner(nsWindow* aWindow)
     : mWindow(aWindow) {}
 
 DirectManipulationOwner::~DirectManipulationOwner() { Destroy(); }
+
+#if !defined(__MINGW32__) && !defined(__MINGW64__)
 
 void DManipEventHandler::SendPinch(Phase aPhase, float aScale) {
   PinchGestureInput::PinchGestureType pinchGestureType =
@@ -439,7 +451,10 @@ void DManipEventHandler::SendPan(Phase aPhase, float x, float y,
   }
 }
 
+#endif // !defined(__MINGW32__) && !defined(__MINGW64__)
+
 void DirectManipulationOwner::Init(const LayoutDeviceIntRect& aBounds) {
+#if !defined(__MINGW32__) && !defined(__MINGW64__)
   HRESULT hr = CoCreateInstance(
       CLSID_DirectManipulationManager, nullptr, CLSCTX_INPROC_SERVER,
       IID_IDirectManipulationManager, getter_AddRefs(mDmManager));
@@ -553,10 +568,12 @@ void DirectManipulationOwner::Init(const LayoutDeviceIntRect& aBounds) {
     mDmHandler = nullptr;
     return;
   }
+#endif // !defined(__MINGW32__) && !defined(__MINGW64__)
 }
 
 void DirectManipulationOwner::ResizeViewport(
     const LayoutDeviceIntRect& aBounds) {
+#if !defined(__MINGW32__) && !defined(__MINGW64__)
   if (mDmHandler) {
     mDmHandler->mBounds = aBounds;
   }
@@ -568,9 +585,11 @@ void DirectManipulationOwner::ResizeViewport(
       NS_WARNING("SetViewportRect failed");
     }
   }
+#endif
 }
 
 void DirectManipulationOwner::Destroy() {
+#if !defined(__MINGW32__) && !defined(__MINGW64__)
   if (mDmHandler) {
     mDmHandler->mWindow = nullptr;
     mDmHandler->mOwner = nullptr;
@@ -621,13 +640,16 @@ void DirectManipulationOwner::Destroy() {
   mDmViewport = nullptr;
   mDmUpdateManager = nullptr;
   mDmManager = nullptr;
+#endif // !defined(__MINGW32__) && !defined(__MINGW64__)
   mWindow = nullptr;
 }
 
 void DirectManipulationOwner::SetContact(UINT aContactId) {
+#if !defined(__MINGW32__) && !defined(__MINGW64__)
   if (mDmViewport) {
     mDmViewport->SetContact(aContactId);
   }
+#endif
 }
 
 }  // namespace widget
